fix canvas z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,4 +8,5 @@ body {
     touch-action: none;
     top: 0;
     left: 0;
+    z-index: -1;
 }
